--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин компьютеров</title>
-    <!-- Подключаем Bootstrap 5.0 для улучшения интерфейса -->
+    <!-- Подключение Bootstrap 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -35,7 +35,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Отображаем все товары по умолчанию -->
+                <!-- Отображение всех товаров-->
                 {% for product in all_products %}
                     <tr>
                         <td>{{ product.name }}</td>
@@ -46,7 +46,7 @@
                     </tr>
                 {% endfor %}
 
-                <!-- Отображаем товары, добавляемые по промокоду -->
+                <!-- Отображение товаров, добавляемых по промокоду -->
                 {% for product in promo_products %}
                     <tr class="table-warning">
                         <td>{{ product.name }} <span class="badge bg-info">Доп. товар</span></td>
