--- a/shop/templates/shop/purchase_form.html
+++ b/shop/templates/shop/purchase_form.html
@@ -30,6 +30,9 @@
             <!-- Кнопка отправки формы -->
             <button type="submit" class="btn btn-primary">Отправить</button>
         </form>
+
+        <!-- Кнопка назад на главную страницу -->
+        <a href="{% url 'index' %}" class="btn btn-secondary mt-3">Назад на главную</a>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
